[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/UI/Icons/arrow-down-sign-to-navigate.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Vik/UI/Minimap.gd" type="Script" id=2]

[node name="Map" type="MarginContainer"]
margin_right = 512.0
margin_bottom = 330.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 507.0
margin_bottom = 325.0

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 507.0
margin_bottom = 325.0

[node name="Grid" type="TextureRect" parent="MarginContainer"]
margin_right = 502.0
margin_bottom = 320.0

[node name="PlayerMarker" type="Sprite" parent="MarginContainer/Grid"]
position = Vector2( 207.655, 205.5 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="GlitchMarker" type="Sprite" parent="MarginContainer/Grid"]

[node name="SpeedrunnerMarker" type="Sprite" parent="MarginContainer/Grid"]

[node name="TaskMarker" type="Sprite" parent="MarginContainer/Grid"]
